# orchestator

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
scripts/: run_eval_experiment.py  seed_opik_dataset.py  seed_opik_prompts.py  setup_calendar_oauth.py
src/: __init__.py  config.py  main.py
src/agents/: llm.py  prompt_loader.py  prompts.py
src/bot/: handlers.py  webhook.py
src/calendar/: auth.py  client.py
src/gmail/: __init__.py  send.py
src/graph/: __init__.py  graph.py  skills.py  state.py
src/graph/nodes/: __init__.py  advance_plan.py  calendar.py  calendar_date_resolver.py  copy.py  email.py  router.py  strategy.py  synthesizer.py
src/graph/tools/: __init__.py  calendar.py
tests/: conftest.py  test_graph.py  test_router.py  test_skills.py  test_tools_calendar.py
